# starwars-python

./: README.md  pyproject.toml  sdkgen.json
.github/workflows/: sdkgen.yml
src/sdk/: client.py  collection.py  film.py  film_collection.py  film_tag.py  people.py  people_collection.py  people_tag.py  planet.py  planet_collection.py  planet_tag.py  root.py  specie.py  specie_collection.py  specie_tag.py  species.py  species_collection.py  species_tag.py  starship.py  starship_collection.py  starship_tag.py  vehicle.py  vehicle_collection.py  vehicle_tag.py
