[project]
name = "sdkfabric-starwars"
version = "0.1.0"
authors = [
  { name="Christoph Kappestein", email="christoph.kappestein@gmail.com" },
]
description = "Starwars Python SDK managed by SDK Fabric"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "sdkgen-client"
]

[project.urls]
Homepage = "https://github.com/sdk-fabric/starwars-python"
Issues = "https://github.com/sdk-fabric/starwars-python/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sdk"]
package-dir = {"" = "src"}
